--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-
+      <ul id="planner-list"></ul>
       
     </div>
 
@@ -39,6 +39,7 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="js/script.js"></script>
 
   </body>
 </html>
